--- a/app/src/main/res/layout/activity_company_information.xml
+++ b/app/src/main/res/layout/activity_company_information.xml
@@ -890,7 +890,8 @@
                     android:background="@drawable/bg_white_color_light_border"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp">
+                    android:paddingBottom="@dimen/_14sdp"
+                    android:onClick="aoiClick">
 
 
                     <ImageView
@@ -966,7 +967,8 @@
                     android:background="@drawable/bg_white_color_light_border"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp">
+                    android:paddingBottom="@dimen/_14sdp"
+                    android:onClick="einLetterClick">
 
 
                     <ImageView
@@ -1040,7 +1042,8 @@
                     android:background="@drawable/bg_white_color_light_border"
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
-                    android:paddingBottom="@dimen/_14sdp">
+                    android:paddingBottom="@dimen/_14sdp"
+                    android:onClick="w9FormClick">
 
 
                     <ImageView
