--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -10,10 +10,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_marginStart="@dimen/_50sdp"
-        android:layout_margin="@dimen/_10ssp"
+        android:layout_margin="@dimen/_20sdp"
         android:contentDescription="@string/businessProfileAccountItemChildImage"
-        android:src="@drawable/acct_profile"
+        android:src="@drawable/profile"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintStart_toEndOf="@+id/title"
         app:layout_constraintTop_toTopOf="parent" />
