--- a/app/src/main/res/layout/business_profile_accounts_item_child.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item_child.xml
@@ -2,20 +2,43 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_marginStart="@dimen/_30sdp"
     android:layout_height="wrap_content">
 
-    <ImageView
-        android:id="@+id/profile_img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_16sdp"
-        android:layout_margin="@dimen/_20sdp"
-        android:contentDescription="@string/businessProfileAccountItemChildImage"
-        android:src="@drawable/profile"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/profile_account_profile_image"
+        android:layout_width="@dimen/_35sdp"
+        android:layout_height="@dimen/_35sdp"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="center"
+        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginStart="@dimen/_30sdp"
+        android:layout_marginBottom="@dimen/_25sdp"
+        app:cardBackgroundColor="@color/white"
+        app:cardCornerRadius="@dimen/_18sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintStart_toEndOf="@+id/title"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/profile_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:contentDescription="@string/businessProfileAccountItemChildImage"
+            android:scaleType="fitXY"
+            android:src="@color/light_gray"
+            android:visibility="visible" />
+
+        <TextView
+            android:id="@+id/b_imageTextTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/opensans_bold"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_20sdp"
+            android:visibility="gone" />
+    </androidx.cardview.widget.CardView>
+
 
     <TextView
         android:id="@+id/title"
@@ -25,9 +48,9 @@
         android:padding="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
-        app:layout_constraintStart_toEndOf="@id/profile_img"
-        app:layout_constraintBottom_toBottomOf="@id/profile_img"
+        app:layout_constraintStart_toEndOf="@id/profile_account_profile_image"
+        app:layout_constraintBottom_toBottomOf="@id/profile_account_profile_image"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/profile_img"/>
+        app:layout_constraintTop_toTopOf="@id/profile_account_profile_image"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
