--- a/app/src/main/res/layout/default_account_dialog.xml
+++ b/app/src/main/res/layout/default_account_dialog.xml
@@ -35,7 +35,7 @@
             android:orientation="vertical">
 
             <ExpandableListView
-                android:id="@+id/recyclerView"
+                android:id="@+id/business_profile_accounts_expandable_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_20sdp"
