"Merchant Settings:Company Information Api Integration and functionality added"

--- a/app/src/main/res/layout/activity_change_email.xml
+++ b/app/src/main/res/layout/activity_change_email.xml
@@ -29,10 +29,10 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_centerInParent="true"
             android:layout_marginTop="@dimen/_20sdp"
             android:fontFamily="@font/opensans_semibold"
             android:text="Email"
@@ -53,6 +53,7 @@
             android:orientation="vertical"
             >
             <TextView
+                android:id="@+id/currentTitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Current Email"
@@ -63,6 +64,7 @@
                 android:textColor="@color/primary_black"
                 android:fontFamily="@font/opensans_regular"/>
             <TextView
+                android:id="@+id/company_email"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="support@firebbq.com"
