--- a/app/src/main/res/layout/activity_edit_email2.xml
+++ b/app/src/main/res/layout/activity_edit_email2.xml
@@ -26,6 +26,7 @@
             />
 
         <TextView
+            android:id="@+id/editTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_14sdp"
@@ -53,6 +54,7 @@
             >
 
             <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout"
                 style="@style/TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -64,7 +66,7 @@
                 app:hintTextColor="@color/primary_green">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/companyemailET"
+                    android:id="@+id/companyEmailET"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semibold"
@@ -82,6 +84,7 @@
                     android:textSize="@dimen/_12ssp" />
             </com.google.android.material.textfield.TextInputLayout>
             <androidx.cardview.widget.CardView
+                android:id="@+id/saveCh"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_43sdp"
                 android:layout_marginTop="@dimen/_170sdp"
