--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -53,13 +53,13 @@
                         android:textColor="@color/primary_black"
                         android:textSize="@dimen/text_size_20sp" />
 
-
                     <ImageView
                         android:id="@+id/imgProfile"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:scaleType="centerCrop"
                         android:visibility="visible" />
+
                 </RelativeLayout>
             </androidx.cardview.widget.CardView>
 
@@ -140,9 +140,11 @@
 
             <ExpandableListView
                 android:id="@+id/recyclerView"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginBottom="@dimen/_15sdp"
                 android:divider="@null"
                 android:groupIndicator="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -154,6 +156,7 @@
     <LinearLayout
         android:id="@+id/profileLL"
         android:layout_width="match_parent"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_below="@+id/profileviewLL"
         android:layout_marginTop="@dimen/_5sdp"
@@ -161,18 +164,40 @@
         android:gravity="center"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/_11sdp"
-            android:layout_marginStart="@dimen/_20sdp"
-            android:gravity="center"
-            android:orientation="horizontal">
+            <androidx.cardview.widget.CardView
+                android:id="@+id/profile_account_profile_image"
+                android:layout_width="@dimen/_35sdp"
+                android:layout_height="@dimen/_35sdp"
+                android:layout_alignParentRight="true"
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_10ssp"
+                android:layout_marginBottom="@dimen/_10ssp"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="@dimen/_18sdp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/title"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/profile" />
+                <ImageView
+                    android:id="@+id/profile_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:contentDescription="@string/businessProfileAccountItemChildImage"
+                    android:scaleType="fitXY"
+                    android:src="@color/light_gray"
+                    android:visibility="visible" />
+
+                <TextView
+                    android:id="@+id/b_imageTextTV"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_20sdp"
+                    android:visibility="gone" />
+            </androidx.cardview.widget.CardView>
 
             <TextView
                 android:layout_width="match_parent"
@@ -183,7 +208,6 @@
                 android:text="Jonathan Joestar"
                 android:textColor="@color/primary_black"
                 android:textSize="@dimen/_11ssp" />
-        </LinearLayout>
 
     </LinearLayout>
 
