--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -6,7 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".view.business.TeamActivity"
     android:orientation="vertical"
-    android:background="@color/et_bg_gray">
+    android:background="@color/et_bg_gray"
+    android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,12 +25,13 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_back"
+                android:contentDescription="@string/team"/>
         </LinearLayout>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Team"
+            android:text="@string/team"
             android:textColor="@color/black"
             android:textSize="@dimen/_16ssp"
             android:fontFamily="@font/opensans_bold"
@@ -52,17 +54,18 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_9sdp"
+                android:contentDescription="@string/name"
                 android:src="@drawable/ic_search_icon" />
 
             <EditText
                 android:id="@+id/searchET"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ123456789"
                 android:focusable="true"
                 android:fontFamily="@font/opensans_regular"
-                android:hint="Name "
+                android:hint="@string/name"
                 android:imeOptions="actionDone"
                 android:inputType="textNoSuggestions"
                 android:maxLines="1"
@@ -86,8 +89,9 @@
                 <ImageView
                     android:layout_width="@dimen/_10sdp"
                     android:layout_height="@dimen/_10sdp"
-                    android:layout_marginRight="@dimen/_10sdp"
-                    android:src="@drawable/ic_close" />
+                    android:layout_marginEnd="@dimen/_10sdp"
+                    android:src="@drawable/ic_close"
+                    android:contentDescription="@string/close"/>
             </LinearLayout>
         </LinearLayout>
 
@@ -109,6 +113,7 @@
         android:layout_marginHorizontal="@dimen/_11sdp"
         app:cardCornerRadius="10dp">
         <LinearLayout
+            android:id="@+id/addTeamMemberL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -125,12 +130,13 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_add_circle"/>
+                    android:src="@drawable/ic_add_circle"
+                    android:contentDescription="@string/add_team_members"/>
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/_11sdp"
+                    android:layout_marginStart="@dimen/_11sdp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="@string/add_team_members"
                     android:textColor="@color/primary_black"
