--- a/app/src/main/res/layout/activity_dbainfo_details.xml
+++ b/app/src/main/res/layout/activity_dbainfo_details.xml
@@ -132,7 +132,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <TextView
-                        android:id="@+id/editProfileTV"
+                        android:id="@+id/companynameTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -143,7 +143,7 @@
                         android:textSize="@dimen/_16ssp" />
 
                     <LinearLayout
-                        android:id="@+id/editcompanyemailLL"
+                        android:id="@+id/companyweblLL"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -156,7 +156,7 @@
                             android:src="@drawable/ic_x" />
 
                         <TextView
-                            android:id="@+id/companyEmailTV"
+                            android:id="@+id/editcompanyweblTV"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="@dimen/_3sdp"
@@ -168,7 +168,7 @@
                     </LinearLayout>
 
                     <TextView
-                        android:id="@+id/BusinesstypeTV"
+                        android:id="@+id/companyBusinesstypeTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
@@ -234,7 +234,7 @@
                                 android:textSize="@dimen/_11ssp" />
 
                             <TextView
-                                android:id="@+id/editcompanyemailTV"
+                                android:id="@+id/companyEmailTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginBottom="@dimen/_7sdp"
