--- a/app/src/main/res/layout/activity_add_bank.xml
+++ b/app/src/main/res/layout/activity_add_bank.xml
@@ -6,22 +6,12 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:fitsSystemWindows="true"
-    tools:context=".view.business.SelectPaymentMethodActivity">
-
-    <include
-        android:id="@+id/addpayment"
-        layout="@layout/addpayment_method"
-        android:visibility="visible" />
-
-    <include
-        android:id="@+id/paymentMethods"
-        layout="@layout/selectpaymentmethod"
-        android:visibility="gone" />
+    tools:context=".view.business.AddBankAccount">
 
     <include
         android:id="@+id/externalBank"
         layout="@layout/activity_add_external_bank_acc"
-        android:visibility="gone" />
+        android:visibility="visible" />
 
     <include
         android:id="@+id/firstError"
@@ -30,7 +20,7 @@
 
     <include
         android:id="@+id/banksuccess"
-        layout="@layout/activity_all_done_success"
+        layout="@layout/add_bank_created_sucessful"
         android:visibility="gone" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
