--- a/app/src/main/res/layout/activity_add_external_bank_acc.xml
+++ b/app/src/main/res/layout/activity_add_external_bank_acc.xml
@@ -88,6 +88,7 @@
                 app:cardCornerRadius="@dimen/_22sdp">
 
                 <TextView
+                    android:id="@+id/tvHead"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
