--- a/app/src/main/res/layout/activity_merchants_agrement.xml
+++ b/app/src/main/res/layout/activity_merchants_agrement.xml
@@ -82,6 +82,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_11sdp"
             android:layout_marginRight="@dimen/_11sdp"
+            android:layout_marginBottom="@dimen/_20sdp"
             app:cardCornerRadius="@dimen/_10sdp">
 
             <LinearLayout
@@ -117,60 +118,6 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_21sdp"
-            android:layout_marginTop="@dimen/_10sdp"
-            android:layout_marginRight="@dimen/_21sdp"
-            android:layout_marginBottom="@dimen/_18sdp"
-            android:visibility="gone"
-            android:orientation="horizontal">
-
-            <CheckBox
-                android:id="@+id/agreementCB"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="-5dp"
-                android:fontFamily="@font/opensans_regular"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp"
-                android:theme="@style/AppTheme" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text="I agree to"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
-
-            <TextView
-                android:id="@+id/tosTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text=" Terms of Service"
-                android:textColor="@color/primary_green"
-                android:textSize="@dimen/_11ssp" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text=" &amp; "
-                android:textColor="@color/black"
-                android:textSize="@dimen/_11ssp" />
-
-            <TextView
-                android:id="@+id/privacyTV"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/opensans_regular"
-                android:text="@string/privay_policy"
-                android:textColor="@color/primary_green"
-                android:textSize="@dimen/_11ssp" />
-        </LinearLayout>
 
         <androidx.cardview.widget.CardView
             android:id="@+id/AgreeDoneCv"
@@ -179,8 +126,10 @@
             android:layout_marginLeft="@dimen/_21sdp"
             android:layout_marginTop="@dimen/_20sdp"
             android:layout_marginRight="@dimen/_21sdp"
-            app:cardBackgroundColor="@color/inactive_color"
-            app:cardCornerRadius="@dimen/_22sdp">
+            app:cardBackgroundColor="@color/primary_color"
+            app:cardCornerRadius="@dimen/_22sdp"
+            android:visibility="gone"
+            >
 
             <TextView
                 android:layout_width="match_parent"
@@ -195,6 +144,7 @@
         </androidx.cardview.widget.CardView>
 
         <TextView
+            android:id="@+id/savedtextTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -203,6 +153,7 @@
             android:fontFamily="@font/opensans_regular"
             android:text="@string/saved_automatically"
             android:textColor="@color/dark_grey"
-            android:textSize="@dimen/_11ssp" />
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone"/>
     </LinearLayout>
 </LinearLayout>
